[package]
name = "geoip-api"
version = "0.3.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1.42", features = ["full"] }
maxminddb = "0.26"
reqwest = { version = "0.12", features = ["gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
flate2 = "1.0"